启动脚本增加jvm参数